Added pointer style to choices on hover

--- a/src/styles/pages/_game.scss
+++ b/src/styles/pages/_game.scss
@@ -56,17 +56,20 @@
     align-items: center;
     width: 100%;
     position: relative;
-   
+    
     .choices-1 {
       position: relative;
       left: -20px;
       align-self: flex-start;
+      cursor: pointer;
     }
     .choices-2 {
       align-self: center;
+      cursor: pointer;
     }
     .choices-3 {
       align-self: flex-start;
+      cursor: pointer;
     }
   }
 }
