Endend project with known issues

--- a/src/styles/pages/_game.scss
+++ b/src/styles/pages/_game.scss
@@ -73,3 +73,12 @@
     }
   }
 }
+.game-screen-fail {
+  background-color: #FA0000;
+  
+}
+
+.game-screen-success {
+  background-color: #00BF63;
+
+}
